--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,12 @@ edition = "2021"
 
 [dependencies]
 rcu_cell = "1"
+
+[dev-dependencies]
+seize = "0.4.9"
+criterion = "0.3.5"
+crossbeam-epoch = "0.9.8"
+
+[[bench]]
+name = "stack"
+harness = false
