--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ seize = "0.4.9"
 criterion = "0.3.5"
 parking_lot = "0.12"
 crossbeam-epoch = "0.9.8"
+crossbeam-queue = "0.3.11"
 
 [[bench]]
 name = "stack"
