:pencil: use latest rcu_cell

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rcu_cell = "1"
-# rcu_cell = { path = "../rcu_cell" }
+rcu_cell = { git = "https://github.com/Xudong-Huang/rcu_cell.git" }
 crossbeam-utils = "0.8.20"
 
 [dev-dependencies]
